[package]
name = "shiden34"
version = "1.0.0"
authors = ["Astar builder"]
edition = "2021"

[dependencies]
ink = { version = "~4.2.1", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

openbrush = { branch = "develop", git = "https://github.com/Brushfam/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }
payable_mint_pkg = { path = "../../logics", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",

    "openbrush/std",
    "payable_mint_pkg/std",
]
ink-as-dependency = []
